--- a/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_sk.properties
+++ b/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_sk.properties
@@ -1,13 +1,13 @@
-#C:\Program Files\PhET-1.0\sims\cck\cck-strings_sk.properties
-#Wed Mar 05 18:34:22 CET 2008
+#circuit-construction-kit-strings_sk.properties created Thu Dec 02 18:37:09 CET 2010 using: circuit-construction-kit 3.19.00 (41978), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 18:37:09 CET 2010
 CCK3ControlPanel.HideElectronsCheckBox=Skry\u0165 elektr\u00F3ny
-ComponentEditor.BulbResistanceUnits=\u03A9
 CCK3ControlPanel.NonContactAmmeterCheckBox=<html>Bezkontaktn\u00FD<br> amp\u00E9rmeter</html>
+circuit-construction-kit-dc-virtual-lab.name=Stavebnica elektrick\u00FDch obvodov (jednosmern\u00FD pr\u00FAd) 
 CircuitComponentInteractiveGraphic.RemoveMenuItem=Odstr\u00E1ni\u0165
+NewCCK3ControlPanel.Yes=\u00C1no
 ComponentEditor.ResistorResistanceName=Odpor
 BranchSource.Resistor=Rezistor
 CCK3ControlPanel.MediumRadioButton=Stredn\u00E1
-cck-dc.name=Zostavenie el. obvodov (len jednosmern\u00FD pr\u00FAd)
 GrabBag.PencilLead=Ceruzka
 CCK3ControlPanel.Enable=Zobrazi\u0165 >>
 add.voltage=Oscilogram nap\u00E4tia
@@ -31,20 +31,22 @@ BranchSource.LightBulb=\u017Diarovka
 ConstantDensityPropagator.SpeedLimitReached2=% z norm\u00E1lu\!
 BranchSource.Capacitor=Kondenz\u00E1tor
 ConstantDensityPropagator.SpeedLimitReached1=Anim\u00E1cia prekro\u010Dila najvy\u0161\u0161iu dovolen\u00FA r\u00FDchlos\u0165\! R\u00FDchlos\u0165 simul\u00E1cie je zn\u00ED\u017Een\u00E1 na
+circuit-construction-kit-ac.name=Stavebnica elektrick\u00FDch obvodov
 CCK3ControlPanel.WireResistivitySlider=Odpor vodi\u010Dov
 BranchSource.Inductor=Cievka
+change-frequency=Zmeni\u0165 frekvenciu
 GrabBag.DollarBill=Bankovka
 ComponentEditor.BulbResistanceName=Odpor
-ReadoutGraphic.Amps=A
 CCK3Module.GrabAWire=<html>Uchopte vodi\u010D<br>a premiestnite ho</html>
 ReadoutGraphic.Ohms=\u03A9
 BranchSource.AC=Striedav\u00FD zdroj
-CCKApplication.title=Zostavovanie el. obvodov
 JunctionSplitter.SplitMenuItem=Rozpoji\u0165 uzol
 CCK3ControlPanel.FilePanelBorder=S\u00FAbor
 CCK3ControlPanel.ClearButton=Zmaza\u0165
+NewCCK3ControlPanel.No=Nie
 GrabBagButton.ButtonTitle=Vrecko s predmetmi
 ComponentEditor.BatteryVoltageUnits=V
+ComponentEditor.ACFrequency=Frekviencia
 ReadoutGraphic.Volts=V
 ComponentEditor.ResistorResistanceUnits=\u03A9
 CCK3ControlPanel.HideValuesCheckBox=Skry\u0165 hodnoty
@@ -54,7 +56,6 @@ GrabBag.Penny=Minca
 CCKHelp.ComponentHelp=\u0164ahan\u00EDm presu\u0148, alebo prav\u00FDm kliknut\u00EDm uprav alebo odstr\u00E1\u0148.
 discharge.capacitor=Vybi\u0165 kondenz\u00E1tor
 add.current.chart=Oscilogram pr\u00FAdu
-Toolbox.AmmeterTitle=Amp\u00E9rmeter
 ComponentEditor.BatteryVoltageTitle=Bat\u00E9ria
 CCK3ControlPanel.ToolsPanelBorder=Pr\u00EDstroje
 CCK3ControlPanel.LoopEquations=Rovnice jednoduch\u00E9ho obvodu
@@ -62,11 +63,13 @@ capacitance=Kapacita
 OptionsMenu.ToolboxColorDialogTitle=Farba panela
 ComponentEditor.ResistorResistanceTitle=Rezistor
 CCK3ControlPanel.AmmeterCheckBox=Amp\u00E9rmeter
+ComponentEditor.Hz=Hz
 BranchSource.Wire=Vodi\u010D
 CCK3ControlPanel.SaveButton=Ulo\u017Ei\u0165
 BranchSource.Ammeter=Amp\u00E9rmeter
 CCK3ControlPanel.OhmsLawEquations=Ohmov z\u00E1kon
 CCK3ControlPanel.LIfelikeRadioButton=Model
+time=\u010Cas
 ReadoutGraphic.Farads=F
 CCK3ControlPanel.SchematicRadioButton=Sch\u00E9ma
 ComponentEditor.DoneButton=Upravi\u0165
@@ -82,14 +85,16 @@ CCK3ControlPanel.SmallRadioButton=Mal\u00E1
 CircuitComponentInteractiveGraphic.LeftConnectMenuItem=Zobrazi\u0165 pripojenie v\u013Eavo
 ReadoutGraphic.ACVolts=V
 ac.voltage.source.editor=Zdroj striedav\u00E9ho nap\u00E4tia
+reset.dynamics=Obnovi\u0165 \u010Dinnos\u0165
 CCK3ControlPanel.ShowXMLButton=Zobrazi\u0165 XML
 CCK3ControlPanel.CircuitEquationsFrame=Rovnice obvodu
 ComponentEditor.BatteryResistanceName=Vn\u00FAtorn\u00FD odpor
 CCK3ControlPanel.CloseButton=Zavrie\u0165
 farads=F
-cck-ac.name=Zostavenie el. obvodov (jednosmern\u00FD a striedav\u00FD pr\u00FAd)
 CCK3ControlPanel.LoadButton=Otvori\u0165
 CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Zmeni\u0165 vn\u00FAtorn\u00FD odpor
+current-y-axis=Pr\u00FAd (A)
+circuit-construction-kit-dc.name=Stavebnica elektrick\u00FDch obvodov (jednosmern\u00FD pr\u00FAd) 
 BranchSource.Battery=Bat\u00E9ria
 CCK3ControlPanel.VisualPanelBorder=Zobrazenie
 SeriesAmmeterGraphic.Amps=A
@@ -99,19 +104,23 @@ CCK3ControlPanel.AdvancedPanelBorder=Mo\u017Enosti
 CCK3ControlPanel.SizePanelBorder=Ve\u013Ekos\u0165
 CCK3ControlPanel.DeleteConfirm=Zmaza\u0165 cel\u00FD obvod a za\u010Da\u0165 odznova?
 ComponentEditor.BatteryResistanceUnits=\u03A9
+NewCCK3ControlPanel.Cancel=Zru\u0161i\u0165
 GrabBagButton.Help=Stla\u010Den\u00EDm tla\u010Didla prid\u00E1te predmet na plochu.
+voltage-y-axis=Nap\u00E4tie (V)
 ReadoutGraphic.Henries=H
 CCK3ControlPanel.Disable=Skry\u0165 <<
 BranchSource.Switch=Vyp\u00EDna\u010D
+NewCCK3ControlPanel.DeleteConfirmTitle=Potvrdenie
 CCK3ControlPanel.LargeRadioButton=Ve\u013Ek\u00E1
+circuit-construction-kit-ac-virtual-lab.name=Stavebnica elektrick\u00FDch obvodov
 CCK3ControlPanel.AlmostNoneLabel=Zanedbate\u013En\u00FD
 ComponentEditor.BatteryResistanceTitle=Bat\u00E9ria
+WarningMessages.PossibleError=Upozornenie\: Niektor\u00E9 hodnoty m\u00F4\u017Eu by\u0165 nepresn\u00E9 pre tento obvod.
 CCKHelp.JunctionHelp=\u0164ahan\u00EDm uzol presu\u0148, alebo prav\u00FDm kliknut\u00EDm zobraz pr\u00EDkazy
+ComponentEditor.Frequency=Frekvencia
 GrabBag.Eraser=Guma
 inductance=Induk\u010Dnos\u0165
 InteractiveBranchGraphic.RemoveMenuItem=Odstr\u00E1ni\u0165
 ComponentEditor.MoreVoltsCheckBox=Vy\u0161\u0161ie nap\u00E4tie
 time.sec=\u010Cas (s)
-time=\u010Cas
 GrabBag.Dog=Pes
-
