--- a/trunk/simulations-java/simulations/discharge-lamps/data/discharge-lamps/localization/discharge-lamps-strings_sk.properties
+++ b/trunk/simulations-java/simulations/discharge-lamps/data/discharge-lamps/localization/discharge-lamps-strings_sk.properties
@@ -1,36 +1,35 @@
-#C:\Program Files\PhET-1.0\sims\fluorescent-lights\fluorescent-lights-strings_sk.properties
-#Sat Mar 15 15:06:15 CET 2008
+#discharge-lamps-strings_sk.properties created Thu Dec 02 20:24:45 CET 2010 using: discharge-lamps 1.10.00 (37987), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 20:24:45 CET 2010
 Controls.Single=Jednotlivo
+discharge-lamps.name=Ne\u00F3nov\u00E9 svetl\u00E1 a ostatn\u00E9 v\u00FDbojky 
 ModuleTitle.SingleAtomModule=Jeden at\u00F3m
 ModuleTitle.MultipleAtomModule=Mno\u017Estvo at\u00F3mov
-discharge-lamps.name=Ne\u00F3nov\u00E9 svetl\u00E1 a ostatn\u00E9 v\u00FDbojky 
-discharge-lamps.description=Sk\u00FAmanie ako funguj\u00FA sveteln\u00E9 v\u00FDbojky
 Misc.collision=n\u00E1raze
-ControlPanel.AtomTypeButtonLabel=Vyberte typ at\u00F3mu
 Controls.ElectronProduction=Vy\u017Earovanie  elektr\u00F3nov
 Element.configurable=Konfigurovate\u013En\u00FD
-Materials.configurable=Konfigurovate\u013En\u00FD
 Controls.Continuous=S\u00FAvislo
-Legend.title=Legenda
 Controls.Squiggles=Zobrazi\u0165 prechod medzi hladinami
 Misc.energyAt=Energia pri
 Message.notPctFormat=\u00DAdaj v percent\u00E1ch mus\u00ED by\u0165 medzi 0% a\u017E 100%
+spectrometer.far.uv=ultraf...
+spectrometer.far.ir=infra\u010D...
+simulation.speed=R\u00FDchlos\u0165 simul\u00E1cie...
+spectrometer.reset=Zmaza\u0165
 Controls.AtomType=Typ at\u00F3mu
 Element.hydrogen=Vod\u00EDk
+menu.options=Nastavenia
 Misc.ActualPixBtn.label=<html><center>Zobrazi\u0165 obr\u00E1zok<br>skuto\u010Dn\u00FDch v\u00FDbojek</center></html>
-Legend.electron=Elektr\u00F3n
 Controls.Options=Nastavenia
+Legend.electron=Elektr\u00F3n
 Element.neon=Ne\u00F3n
-Materials.hydrogen=Vod\u00EDk
 ControlPanel.SpectrometerButtonLabel=Spektrometer
+spectrometer.axis.label=Vlnov\u00E1 d\u013A\u017Eka (nanometre)
 Legend.atom=At\u00F3m
 Controls.SlowMotion=Spomalen\u00FD pohyb
-fluorescent-lights.name=Ne\u00F3nov\u00E9 svetl\u00E1 a ostatn\u00E9 v\u00FDbojky 
-Controls.ElectronProductionRate=\u017Deravenie elektr\u00F3dy
+spectrometer.start=\u0160tart
+Color.red=\u010Derven\u00E1
 Controls.FireElectron=Vy\u017Eiari\u0165 elektr\u00F3n
 Misc.groundState=Z\u00E1kladn\u00FD stav
 Element.sodium=Sod\u00EDk
-Legend.photon=Fot\u00F3n
+spectrometer.stop=Stop
 Element.mercury=Ortu\u0165
-Materials.neon=Ne\u00F3n
-
