--- a/trunk/simulations-java/simulations/faraday/data/faraday/localization/faraday-strings_sk.properties
+++ b/trunk/simulations-java/simulations/faraday/data/faraday/localization/faraday-strings_sk.properties
@@ -1,17 +1,19 @@
-#C:\Program Files\PhET-1.0\sims\faraday\faraday-strings_sk.properties
-#Wed Mar 05 22:07:00 CET 2008
+#faraday-strings_sk.properties created Thu Dec 02 19:23:31 CET 2010 using: faraday 2.05.00 (44219), translation-utility 2.09.00 (44031) sep 14, 2010
+#Thu Dec 02 19:23:31 CET 2010
 BarMagnetPanel.showCompass=Zobrazi\u0165 kompas
+magnets-and-electromagnets.name=Magnety a elektromagnety
 Menubar.backgroundColor.mnemonic=F
 TurbinePanel.title=Turb\u00EDna
 Menubar.gridControls.mnemonic=p
 GeneratorModule.title=Gener\u00E1tor
-GridControlsDialog.warning=<html>Upozornenie\! Zmena t\u00FDchto hodn\u00F4t <br>m\u00F4\u017Ee nepriaznivo ovplyvni\u0165 simul\u00E1ciu.
+GridControlsDialog.warning=<html>Upozornenie\! Zmena t\u00FDchto hodn\u00F4t <br>m\u00F4\u017Ee nepriaznivo ovplyvni\u0165 simul\u00E1ciu.</html>
 BarMagnetPanel.showGrid=Zobrazi\u0165 pole
 ElectromagnetPanel.title=Elektromagnet
 ElectromagnetPanel.currentSource=Zdroj pr\u00FAdu
 TransformerModule.title=Transform\u00E1tor
 BarMagnetPanel.flipPolarity=Zmeni\u0165 polaritu
-faraday.description=Uk\u00E1\u017Eka pou\u017Eitia Faradayovho z\u00E1kona 
+generator.name=Gener\u00E1tor
+magnet-and-compass.name=Magnet a kompas
 BarMagnetModule.wiggleMe=Presu\u0148 to alebo to
 VoltmeterGraphic.title=nap\u00E4tie
 BarMagnetPanel.strength=Intenzita\:
@@ -19,8 +21,8 @@ FieldMeter.title=Mg. indukcia (B)
 ElectromagnetModule.title=Elektromagnet
 GridControlsDialog.ok=OK
 PickupCoilPanel.area=Plocha z\u00E1vitu\:
-PickupCoilPanel.indicator=Indik\u00E1tor
 BarMagnetPanel.seeInside=Poh\u013Ead dovn\u00FAtra magnetu
+PickupCoilPanel.indicator=Indik\u00E1tor
 BarMagnetModule.title=Ty\u010Dov\u00FD magnet
 GridControlsDialog.cancel=Zru\u0161i\u0165
 PickupCoilPanel.title=Induk\u010Dn\u00E1 cievka
@@ -30,18 +32,15 @@ PickupCoilModule.title=Induk\u010Dn\u00E1 cievka
 ElectromagnetPanel.numberOfLoops=Z\u00E1vity\:
 BarMagnetPanel.title=Ty\u010Dov\u00FD magnet
 faraday.name=Faradayove magnetick\u00E9 laborat\u00F3rium
-PickupCoilPanel.lightbulb=\u017Diarovka
 ElectromagnetPanel.showElectrons=Zobrazi\u0165 elektr\u00F3ny
 GridControlsDialog.needleSize=Ve\u013Ekos\u0165 magnetky\:
 BackgroundColorDialog.title=Farba pozadia
 TurbineGraphic.rpm=ot. / min
 BatteryGraphic.voltage=V
 Menubar.gridControls=Nastavenie po\u013Ea...
-Reset.button=Vynulova\u0165 v\u0161etko
 Menubar.backgroundColor=Farba pozadia...
-PickupCoilPanel.voltmeter=Voltmeter
 GridControlsDialog.title=Nastavenie po\u013Ea
 ElectromagnetPanel.ac=Striedav\u00FD
 ElectromagnetPanel.dc=Jednosmern\u00FD
+BarMagnetPanel.showEarth=\ Zobrazi\u0165 zemegu\u013Eu
 GridControlsDialog.spacing=Vzdialenos\u0165 magnetiek\:
-
