--- a/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings_sk.properties
+++ b/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings_sk.properties
@@ -1,31 +1,38 @@
-#C:\Program Files\PhET-1.0\sims\greenhouse\greenhouse-strings_sk.properties
-#Sat Mar 15 17:49:39 CET 2008
-GreenhouseControlPanel.ThermometerCheckbox=Teplomer
-greenhouse.description=Simul\u00E1cia sk\u00FAmaj\u00FAca ako sklen\u00EDkov\u00E9 plyny \np\u00F4sobia v atmosf\u00E9re na slne\u010Dn\u00E9 svetlo.
-BaseGreenhouseModule.BeamMeDownText=Okam\u017Eite premiestni\u0165 \!
-GreenhouseControlPanel.Adjustable=Nastavite\u013En\u00E1 koncentr\u00E1cia
-greenhouse.name=Sklen\u00EDkov\u00FD efekt
-GreenhouseLegend.InfraredPhotonLabel=Infra\u010Derven\u00E9 fot\u00F3ny
-GreenhouseControlPanel.None=\u017Diadna
-GreenhouseLegend.LegendTitle=Legenda
-GreenhouseControlPanel.Options=Nastavenia
-GlassPaneControlPanel.ViewPhotonsCheckbox=Zobrazi\u0165 v\u0161etky fot\u00F3ny
-GreenhouseControlPanel.TimePeriodBorderLabel=Atmosf\u00E9ra v \u010Dase
-GreenhouseControlPanel.GasConcentrationSlider=Koncentr\u00E1cia sklen\u00EDkov\u00FDch plynov
-GreenhouseControlPanel.TomorrowLabel=Zajtra?
-GreenhouseControlPanel.TodayLabel=Dnes
-GreenhouseControlPanel.NumberOfCloudsLabel=Po\u010Det oblakov
-BaseGreenhouseModule.FlyMeInText=Priletie\u0165
-GreenhouseControlPanel.ViewPhotonsCheckbox=Zobrazi\u0165 v\u0161etky fot\u00F3ny
-GlassPaneControlPanel.GlassPaneLabel=Po\u010Det\nsklen\u00FDch panelov
-ModuleTitle.GreenHouseModule=Sklen\u00EDkov\u00FD efekt
-GreenhouseLegend.SunlightPhotonLabel=Slne\u010Dn\u00E9 fot\u00F3ny
-GreenhouseControlPanel.Lots=Ve\u013Ek\u00E1
+#greenhouse-strings_sk.properties created Wed Dec 01 23:09:33 CET 2010 using: greenhouse 3.01.00 (45324), translation-utility 2.09.00 (44031) sep 14, 2010
+#Wed Dec 01 23:09:33 CET 2010
 ModuleTitle.GlassLayerModule=Vrstvy skla
+GreenhouseLegend.LegendTitle=Legenda
+ModuleTitle.PhotonAbsorptionModule=Absorpcia fot\u00F3nov
+GreenhouseControlPanel.None=\u017Diadna
+GreenhouseControlPanel.NumberOfCloudsLabel=Po\u010Det oblakov
+GreenhouseControlPanel.Lots=Ve\u013Ek\u00E1
+GlassPaneControlPanel.GlassPaneLabel=Po\u010Det\nsklen\u00FDch panelov
 GlassPaneControlPanel.ThermometerCheckbox=Teplomer
-BaseGreenhouseModule.QuestionText=Ako sa chcete dosta\u0165 na Zem?
-GreenhouseControlPanel.Celsius=Celzius
+PhotonAbsorptionControlPanel.BuildAtmosphere=<html>Zlo\u017Eenie<br>atmosf\u00E9ry</html>
+PhotonAbsorptionControlPanel.CarbonDioxide=Kysli\u010Dn\u00EDk uhli\u010Dit\u00FD 
 GreenhouseControlPanel.IceAgeLabel=Doba \u013Eadov\u00E1
-GreenhouseControlPanel.GreenhouseGasBorderLabel=Zlo\u017Eenie sklen\u00EDkov\u00FDch plynov
+GlassPaneControlPanel.ViewPhotonsCheckbox=Zobrazi\u0165 v\u0161etky fot\u00F3ny
+PhotonAbsorptionControlPanel.Water=Voda
+PhotonAbsorptionControlPanel.Nitrogen=Dus\u00EDk
+GreenhouseControlPanel.Celsius=Celzius
+GreenhouseControlPanel.Options=Nastavenia
+greenhouse.name=Sklen\u00EDkov\u00FD efekt
+PhotonAbsorptionControlPanel.AtmosphericGasesTitle=Plyny v atmosf\u00E9re
+GreenhouseControlPanel.TimePeriodBorderLabel=Atmosf\u00E9ra v \u010Dase
+GreenhouseControlPanel.Adjustable=Nastavite\u013En\u00E1 koncentr\u00E1cia
+ModuleTitle.GreenHouseModule=Sklen\u00EDkov\u00FD efekt
+molecules-and-light.name=Molekuly a svetlo
+GreenhouseLegend.SunlightPhotonLabel=Slne\u010Dn\u00E9 fot\u00F3ny
 GreenhouseControlPanel.RelativeHumidityAbbreviation=rel. vlhkos\u0165
-
+GreenhouseLegend.InfraredPhotonLabel=Infra\u010Derven\u00E9 fot\u00F3ny
+GreenhouseControlPanel.ThermometerCheckbox=Teplomer
+GreenhouseControlPanel.GreenhouseGasBorderLabel=Zlo\u017Eenie sklen\u00EDkov\u00FDch plynov
+ClockPanel.SliderTitle=R\u00FDchlos\u0165 fot\u00F3nov
+PhotonAbsorptionControlPanel.Methane=Met\u00E1n
+GreenhouseControlPanel.ViewPhotonsCheckbox=Zobrazi\u0165 v\u0161etky fot\u00F3ny
+GreenhouseControlPanel.GasConcentrationSlider=Koncentr\u00E1cia sklen\u00EDkov\u00FDch plynov
+PhotonAbsorptionControlPanel.Molecules=molekuly
+PhotonEmitterNode.Visible=<html>vidite\u013En\u00E9<br>fot\u00F3ny</html>
+PhotonEmitterNode.Infrared=<html>infra\u010Derven\u00E9<br>fot\u00F3ny</html>
+PhotonAbsorptionControlPanel.Oxygen=Kysl\u00EDk
+GreenhouseControlPanel.TodayLabel=Dnes
