--- a/trunk/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_sk.properties
+++ b/trunk/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_sk.properties
@@ -1,16 +1,16 @@
-#ideal-gas-strings_sk.properties created Fri Mar 06 03:46:44 CET 2009 using: ideal-gas 3.08.00 (17033), translation-utility 1.12.00 (29256)
-#Fri Mar 06 03:46:44 CET 2009
-IdealGasControlPanel.Add_remove_heat_from_floor_only=<html>Prida\u0165/ubra\u0165 teplo<br></br>len vo vrstve</html>
+#ideal-gas-strings_sk.properties created Wed Dec 01 22:44:35 CET 2010 using: ideal-gas 3.12.00 (38433), translation-utility 2.09.00 (44031) sep 14, 2010
+#Wed Dec 01 22:44:35 CET 2010
 Common.None=\u017Diadny
 HeliumBalloonControlPanel.controlsTitle=H\u00E9lium v bal\u00F3ne
-PressTempTool.units=jednotky
 balloons-and-buoyancy.name=Bal\u00F3ny a  vztlak
 EnergyHistorgramDialog.Fewer_Details=<< Bez podrobnost\u00ED
 Common.Temperature=Teplota
 Common.Gravity=Gravit\u00E1cia
 IdealGasMonitorPanel.Heavy_species=\u0164a\u017Ek\u00FD druh
 ModuleTitle.IdealGas=Vlastnosti plynu
+help.stove=Teplo m\u00F4\u017Eete prida\u0165 alebo\nodobra\u0165 ovl\u00E1da\u010Dom tepla
 EnergyHistorgramDialog.Light_Speed_label=R\u00FDchlos\u0165 \u013Eahk\u00FDch molek\u00FAl
+pressure-gauge.title=Tlak
 IdealGasModule.StopwatchTimeUnits=ps
 IdealGasControlPanel.Measurement_Tools_on=Meracie n\u00E1stroje >>
 WiggleMe.handle\!=r\u00FA\u010Dkou\!
@@ -24,17 +24,16 @@ WiggleMe.Pump_the=Pumpujte
 MeasurementControlPanel.Show_species_information=Inform\u00E1cie o plyne
 IdealGasControlPanel.Measurement_Tools_off=<< Skry\u0165 n\u00E1stroje
 IdealGasControlPanel.AveTimePanelTitle=Stredn\u00E1 doba pohybu
-MeasurementControlPanel.Measure_pressure_in_layer=Mera\u010D vo vrstve
+MeasurementControlPanel.Measure_pressure_in_layer=<html>Mera\u010D vo vrstve</html>
 IdealGasMonitorPanel.Light_species=\u013Dahk\u00FD druh
+chart.label.msec=m/s
 RigidHollowSphereControlPanel.controlsTitle=Plyn v sf\u00E9re
+help.wall=Stenu m\u00F4\u017Eete presun\u00FA\u0165\nv\u013Eavo alebo vpravo
 IdealGasControlPanel.Show_CM_lines=Zna\u010Dky \u0165a\u017Eiska hmoty
-IdealGasMonitorPanel.Title=Vlastnosti plynu
 IdealGasControlPanel.Tools_and_options=N\u00E1stroje & Nastavenia
 IdealGasControlPanel.Gas_In_Chamber=Plyn v komore
 AdvancedControlPanel.Particle_Temperature=<html>Teplota<br>nov\u00FDch \u010Dast\u00EDc (K)\:</html>
-ModuleTitle.Measurements=Ve\u013Ekos\u0165
 ModuleTitle.HeliumBalloon=Bal\u00F3n s h\u00E9liom
-balloons-and-buoyancy.description=Pokusy s bal\u00F3nom naplnen\u00FDm h\u00E9liom , tepl\u00FDm vzduchom, alebo pevnou gu\u013Eou naplnenou r\u00F4znymi plynmi. Objavte pre\u010Do niektor\u00E9 bal\u00F3ny sa vzn\u00E1\u0161aj\u00FA a in\u00E9 klesaj\u00FA.
 Common.Heavy_Species=\u0164a\u017Ek\u00FD druh
 ModuleTitle.RigidHollowSphere=Pevn\u00E1 dut\u00E1 gu\u013Ea
 IdealGasControlPanel.Heat_Control=Ovl\u00E1da\u010D tepla
@@ -46,31 +45,32 @@ diffusion.name=Dif\u00FAzia
 Common.Volume=Objem
 EnergyHistorgramDialog.Speed_Distribution=R\u00FDchlos\u0165
 Common.Remove=Ochladi\u0165
-MeasurementControlPanel.Display_energy_histograms=Histogramy energie
+MeasurementControlPanel.Display_energy_histograms=<html>Histogramy energie</html>
+stopwatch.units=ps
 GasSpeciesMonitorPanel.Number_of_Gas_Molecules=Po\u010Det molek\u00FAl plynu
 MeasurementControlPanel.Number_of_particles=<html>Po\u010Det at\u00F3mov</html>
 IdealGasControlPanel.MoreOptions=\u010Eal\u0161ie nastavenia >>
 EnergyHistorgramDialog.Energy_Distribution=Kinetick\u00E1 energia
-GasMonitorPanel.Title=Vlastnosti plynu
 GasSpeciesMonitorPanel.Average_speed=Priem. r\u00FDchlos\u0165
+stopwatch.stop=Stop
 Common.Pressure=Tlak
+stopwatch.start=\u0160tart
 IdealGasControlPanel.Constant_Parameter=Kon\u0161tantn\u00FD parameter
 IdealGasControlPanel.Measurement_Tools=<html><center>Meracie<br>n\u00E1stroje</center></html>
 Common.Light_Species=\u013Dahk\u00FD druh
 GasSpeciesMonitorPanel.Title=Vlastnosti plynu
-GasMonitorPanel.Temperature=Teplota
 MeasurementControlPanel.Display_ruler=Meter
 IdealGasControlPanel.Reset=Odznova
 EnergyHistorgramDialog.OutOfRangeIndicatorLegend=Indikuje d\u00E1ta mimo rozsah
 Common.Add=Zohria\u0165
+Common.Max=Max
 gas-properties.name=Vlastnosti plynu
 AdvancedModule.Count=Po\u010Det
+chart.label.number.of.particles=Po\u010Det \u010Dast\u00EDc
 Common.Lots=Ve\u013Ek\u00E1
-gas-properties.description=Pumpujte plyn do komory a sledujte jeho stav ak zmen\u00EDte objem, prid\u00E1te alebo odoberiete teplo, zmen\u00EDte gravit\u00E1ciu alebo \u010Fal\u0161ie parametre. Zmerajte teplotu a tlak plynu a zistite ako tieto veli\u010Diny spolu  s\u00FAvisia.
-GasMonitorPanel.Pressure=Tlak
 EnergyHistorgramDialog.Title=\u0160tatistika \u010Dast\u00EDc
-reversible-reactions.description=Pozorujte priebeh reakcie. Ako ovplyv\u0148uje celkov\u00E1 energia priebeh reakcie? Zme\u0148te teplotu, v\u00FD\u0161ku bari\u00E9ry a potenci\u00E1lnu energiu. Zaznamenajte koncentr\u00E1ciu a \u010Das reakcie pre ur\u010Denie koeficientu reakcie. Sk\u00FAmajte z\u00E1vislos\u0165 medzi teplotou a Arrheiniusov\u00FDm koeficientom.  
-diffusion.description=Dif\u00FAzia
+help.door=Vrchn\u00E1k m\u00F4\u017Eete posun\u00FA\u0165\nv\u013Eavo alebo vpravo
 reversible-reactions.name=Vratn\u00E9 reakcie
 EnergyHistorgramDialog.Heavy_Speed_label=R\u00FDchlos\u0165 ta\u017Ek\u00FDch molek\u00FAl
 MeasurementControlPanel.Stopwatch=Stopky
+stopwatch.reset=Nulova\u0165
